After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 709741 - audio-sink: fix compilation with GStreamer 0.10
audio-sink: fix compilation with GStreamer 0.10
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: VoIP
3.8.x
Other All
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-10-09 15:19 UTC by Will Thompson
Modified: 2013-10-13 20:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
audio-sink: fix compilation with GStreamer 0.10 (894 bytes, patch)
2013-10-09 15:19 UTC, Will Thompson
committed Details | Review

Description Will Thompson 2013-10-09 15:19:55 UTC
The other option would be to drop support for GStreamer 0.10 I guess?
Comment 1 Will Thompson 2013-10-09 15:19:58 UTC
Created attachment 256822 [details] [review]
audio-sink: fix compilation with GStreamer 0.10

66e393b removed this include, but without it compilation fails for me. I
assume this is beacuse I am building Empathy against GStreamer 0.10 and
Emanuele was building against GStreamer 1.0 when removing unneeded
includes.
Comment 2 Will Thompson 2013-10-09 15:21:05 UTC
For the sake of Googling, the compilation error without this is:

empathy-audio-sink.c:47:148: error: ‘GST_AUDIO_INT_PAD_TEMPLATE_CAPS’ undeclared here (not in a function)
 static GstStaticPadTemplate sink_template = GST_STATIC_PAD_TEMPLATE(
                                                                                                                                                    ^
empathy-audio-sink.c:47:180: error: expected ‘}’ before string constant
 static GstStaticPadTemplate sink_template = GST_STATIC_PAD_TEMPLATE(
                                                                                                                                                                                    ^
Comment 3 Will Thompson 2013-10-12 14:26:17 UTC
Okay, I see that 0.10 is no longer supported on master: https://git.gnome.org/browse/empathy/commit/?id=e3cbf70

But perhaps you would still enjoy applying this patch to the gnome-3-8 branch?
Comment 4 Guillaume Desmottes 2013-10-12 16:30:39 UTC
Review of attachment 256822 [details] [review]:

Yeah, feel free to merge to 3.8 and/or 3.10
Comment 6 Guillaume Desmottes 2013-10-13 20:55:44 UTC
Thanks Will!