audio-sink: fix compilation with GStreamer 0.10

66e393b removed this include, but without it compilation fails for me. I
assume this is beacuse I am building Empathy against GStreamer 0.10 and
Emanuele was building against GStreamer 1.0 when removing unneeded
includes.

https://bugzilla.gnome.org/show_bug.cgi?id=709741